--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -2,7 +2,7 @@
     float: right;
     margin-top: -130px;
     margin-right: 270px;
-    color: #e65c00;
+    color: #0620ad;
     font-size: 30px;
 }
 
@@ -109,7 +109,7 @@ body.has-active-menu {
 .c-menu--slide-right .c-menu__link {
   display: block;
   padding: 12px 12px;
-  color: #e65c00;
+  color: #0620ad;
   font-size: 30px;
 }
 
