--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 a { 
-    color: #e65c00;
+    color: #0620ad;
     text-decoration: none;
 }
 
@@ -38,7 +38,7 @@ a {
 }
 
 .header a:hover {
-    color: #e65c00;
+    color: #0620ad;
 }
 
 .stretch {
@@ -49,14 +49,14 @@ a {
 }
 
 .info {
-    color: #e65c00;
+    color: #0620ad;
     width: 100%;
     text-align: center;
     position: absolute;
 }
 
 .info a {
-    color: #e65c00;
+    color: #0620ad;
     padding: 5px;
     font-size: 20px;
     display: inline;
@@ -67,7 +67,7 @@ a {
     -webkit-animation: blink 0.7s infinite;
     -moz-animation: blink 0.7s infinite;
     animation: blink 0.7s infinite;
-    color: #e65c00;
+    color: #0620ad;
 }
 @keyframes blink{
     0% { opacity:1; }
